Details
-
Bug
-
Status: Resolved
-
Minor
-
Resolution: Fixed
-
None
-
None
-
None
-
ghx-label-8
Description
IMPALA-10794 introduced names for threads, which messed up process names too in catalogd and impalad (due to JNI calls, did not researched further):
gfurnstahl@gfurnstahl-OptiPlex-7070:~/Impala(IMPALA-11619_gerrit)$ ps fux | egrep "(impala|statestore|catalog)d" gfurnst+ 1291670 1.2 0.2 530472 71364 pts/0 Sl 15:08 0:00 \_ /home/gfurnstahl/Impala/be/build/latest/service/statestored -logbufsecs=5 -v=1 -max_log_files=10 -log_filename=statestored -log_dir=/home/gfurnstahl/Impala/logs/cluster gfurnst+ 1291687 11.7 1.1 10374016 388260 pts/0 Sl 15:08 0:07 \_ /home/gfurnstahl/Impala/be/build/latest/service/catalogd -logbufsecs=5 -v=1 -max_log_files=10 -log_filename=catalogd -log_dir=/home/gfurnstahl/Impala/logs/cluster -kudu_master_hosts localhost --catalog_topic_mode=minimal --hms_event_polling_interval_s=1 gfurnst+ 1291771 15.0 1.4 18684832 478288 pts/0 Sl 15:08 0:09 \_ /home/gfurnstahl/Impala/be/build/latest/service/impalad -disconnected_session_timeout 21600 -kudu_client_rpc_timeout_ms 60000 -kudu_master_hosts localhost -mem_limit=7766732526 -logbufsecs=5 -v=1 -max_log_files=10 -log_filename=impalad -log_dir=/home/gfurnstahl/Impala/logs/cluster -beeswax_port=21000 -hs2_port=21050 -hs2_http_port=28000 -krpc_port=27000 -state_store_subscriber_port=23000 -webserver_port=25000 --enable_minidumps=false --use_local_catalog=true -geospatial_library=HIVE_ESRI gfurnst+ 1291773 14.9 1.4 18685196 475980 pts/0 Sl 15:08 0:09 \_ /home/gfurnstahl/Impala/be/build/latest/service/impalad -disconnected_session_timeout 21600 -kudu_client_rpc_timeout_ms 60000 -kudu_master_hosts localhost -mem_limit=7766732526 -logbufsecs=5 -v=1 -max_log_files=10 -log_filename=impalad_node1 -log_dir=/home/gfurnstahl/Impala/logs/cluster -beeswax_port=21001 -hs2_port=21051 -hs2_http_port=28001 -krpc_port=27001 -state_store_subscriber_port=23001 -webserver_port=25001 --enable_minidumps=false --use_local_catalog=true -geospatial_library=HIVE_ESRI gfurnst+ 1291776 14.6 1.4 18686220 479284 pts/0 Sl 15:08 0:09 \_ /home/gfurnstahl/Impala/be/build/latest/service/impalad -disconnected_session_timeout 21600 -kudu_client_rpc_timeout_ms 60000 -kudu_master_hosts localhost -mem_limit=7766732526 -logbufsecs=5 -v=1 -max_log_files=10 -log_filename=impalad_node2 -log_dir=/home/gfurnstahl/Impala/logs/cluster -beeswax_port=21002 -hs2_port=21052 -hs2_http_port=28002 -krpc_port=27002 -state_store_subscriber_port=23002 -webserver_port=25002 --enable_minidumps=false --use_local_catalog=true -geospatial_library=HIVE_ESRI gfurnstahl@gfurnstahl-OptiPlex-7070:~/Impala(IMPALA-11619_gerrit)$ grep main */comm grep: */comm: No such file or directory gfurnstahl@gfurnstahl-OptiPlex-7070:~/Impala(IMPALA-11619_gerrit)$ grep main /proc/*/comm /proc/1291687/comm:main /proc/1291771/comm:main /proc/1291773/comm:main /proc/1291776/comm:main gfurnstahl@gfurnstahl-OptiPlex-7070:~/Impala(IMPALA-11619_gerrit)$ grep statestored /proc/*/comm /proc/1291670/comm:statestored gfurnstahl@gfurnstahl-OptiPlex-7070:~/Impala(IMPALA-11619_gerrit)$
Now pgrep need -f to look for the search string in the program path too, not only in the process name